tests/cli/snapshots/cli_tests__cli__snapshot_helpers__list_version_mismatch.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---

ID          Name        Description  Flags
------------------------------------------------------
test-skill  test-skill  Test skill   missing from lock
