tests/cli/snapshots/cli_tests__cli__snapshot_helpers__list_version_mismatch_details.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---

ID          Name        Description  Version  Manifest  Lock  Installed  Source Path                                Type   Flags
--------------------------------------------------------------------------------------------------------------------------------------------
test-skill  test-skill  Test skill   [VERSION]    Y         -     Y          [TEMP_DIR]  local  missing from lock
