tests/cli/snapshots/cli_tests__cli__snapshot_helpers__optimize_export_help.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
Export the best skill document from a completed run

Usage: fastskill optimization export [OPTIONS] --out <out> <run-dir>

Arguments:
  <run-dir>  Path to the run directory

Options:
      --out <out>                Destination path for the exported skill document
      --skills-dir <skills-dir>  Override the installation directory for this invocation
      --global                   Use global skills directory (~/.config/fastskill/skills)
  -v, --verbose                  Enable verbose output
  -h, --help                     Print help
  -V, --version                  Print version

Syntax: optimization export <run-dir> --out <path>

Examples:
  fastskill optimization export ./optimize-runs/run-1 --out ./SKILL.md
