tests/cli/snapshots/cli_tests__cli__snapshot_helpers__optimize_help.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
Iterative skill-document optimization via text-gradient

Usage: fastskill optimization [OPTIONS] <COMMAND>

Commands:
  run      Run skill optimization from a config file
  resume   Resume an interrupted optimization run
  status   Show the status of a training run
  inspect  Inspect per-step artifacts from a training run
  export   Export the best skill document from a completed run
  help     Print this message or the help of the given subcommand(s)

Options:
      --skills-dir <skills-dir>  Override the installation directory for this invocation
      --global                   Use global skills directory (~/.config/fastskill/skills)
  -v, --verbose                  Enable verbose output
  -h, --help                     Print help
  -V, --version                  Print version
