tests/cli/snapshots/cli_tests__cli__snapshot_helpers__optimize_inspect_help.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
Inspect per-step artifacts from a training run

Usage: fastskill optimization inspect [OPTIONS] --step <step> <run-dir>

Arguments:
  <run-dir>  Path to the run directory

Options:
      --skills-dir <skills-dir>  Override the installation directory for this invocation
      --step <step>              Step number to inspect (0-based, matching `optimize status`)
      --global                   Use global skills directory (~/.config/fastskill/skills)
      --show <show>              What to show: patches, diffs, gate, skips, or all [possible:
                                 patches|diffs|gate|skips|all] [default: all]
  -v, --verbose                  Enable verbose output
  -h, --help                     Print help
  -V, --version                  Print version

Syntax: optimization inspect <run-dir> --step <n> [--show <mode>]

Examples:
  fastskill optimization inspect ./optimize-runs/run-1 --step 3
  fastskill optimization inspect ./optimize-runs/run-1 --step 3 --show diffs
