tests/cli/snapshots/cli_tests__cli__snapshot_helpers__optimize_resume_help.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
Resume an interrupted optimization run

Usage: fastskill optimization resume [OPTIONS] <run-dir>

Arguments:
  <run-dir>  Path to the run directory to resume

Options:
      --skills-dir <skills-dir>  Override the installation directory for this invocation
      --global                   Use global skills directory (~/.config/fastskill/skills)
  -v, --verbose                  Enable verbose output
  -h, --help                     Print help
  -V, --version                  Print version

Syntax: optimization resume <run-dir>

Examples:
  fastskill optimization resume ./optimize-runs/run-1
