tests/cli/snapshots/cli_tests__cli__snapshot_helpers__optimize_run_help.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
Run skill optimization from a config file

Usage: fastskill optimization run [OPTIONS] --config <config>

Options:
      --config <config>          Path to optimize config file
      --skills-dir <skills-dir>  Override the installation directory for this invocation
      --global                   Use global skills directory (~/.config/fastskill/skills)
      --out-dir <out-dir>        Override the out_dir from the config file
      --resume <resume>          Resume from this run directory instead of starting fresh
  -v, --verbose                  Enable verbose output
      --no-isolation             Score in a shared workspace against the ambient agent environment
                                 (disables per-case scoring isolation)
  -h, --help                     Print help
  -V, --version                  Print version

Syntax: optimization run --config <path> [--out-dir <dir>] [--resume <run-dir>]

Examples:
  fastskill optimization run --config ./optimize.toml
