tests/cli/snapshots/cli_tests__cli__snapshot_helpers__optimize_status_help.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
Show the status of a training run

Usage: fastskill optimization status [OPTIONS] <run-dir>

Arguments:
  <run-dir>  Path to the run directory

Options:
      --skills-dir <skills-dir>  Override the installation directory for this invocation
      --watch                    Poll and re-render every ~2 seconds
      --global                   Use global skills directory (~/.config/fastskill/skills)
  -v, --verbose                  Enable verbose output
  -h, --help                     Print help
  -V, --version                  Print version

Syntax: optimization status <run-dir> [--watch]

Examples:
  fastskill optimization status ./optimize-runs/run-1
  fastskill optimization status ./optimize-runs/run-1 --watch
