tests/cli/snapshots/cli_tests__cli__snapshot_helpers__read_existing_skill.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
---
name: web-scraper
description: A web scraping skill
version: [VERSION]
tags: [scraping, web]
capabilities: [http_client]
---
# Web Scraper Skill

Advanced web scraping capabilities for extracting structured data from websites.

## Features

- Extract structured data
- Handle pagination  
- Support multiple formats (JSON, CSV, XML)
- Rate limiting support
- Custom headers and authentication

## Usage

Basic usage example for web scraping.

```bash
fastskill skill read web-scraper
```

This skill provides comprehensive web scraping functionality.
