tests/cli/snapshots/cli_tests__cli__snapshot_helpers__read_invalid_id_format.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
Error: Invalid skill ID format: 'invalid skill id!'

Expected format:
  - id
  - scope/id
  - id@version or scope/id@version (if supported)
Error: Validation error: Invalid skill ID format: Validation error: Skill ID contains invalid characters (only alphanumeric, dash, underscore allowed)
