tests/cli/snapshots/cli_tests__cli__snapshot_helpers__read_invalid_skill_id.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
Error: Validation error: Invalid skill ID 'invalid skill id!': Validation error: Skill ID must be 'name' or 'scope/name' using only alphanumeric, dash, or underscore characters. Expected 'name' or 'scope/name'.
